[package]
name = "pbtools"
version = "0.1.0"
authors = ["Matthew Costa <ucosty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pbcopy"
path = "src/pbcopy/main.rs"

[[bin]]
name = "pbpaste"
path = "src/pbpaste/main.rs"

[dependencies]
x11rb = "0.7.0"